# great-expectations-stack

./: .env.example  .env.hive.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
configs/: freshness.example.yml  freshness.hive-kerberos.example.yml  freshness.local-postgres.yml
flyway/sql/: V1__create_validation_schemas_and_tables.sql
requirements/: app.dependencies.txt  hive.dependencies.txt  test.dependencies.txt
src/gx_freshness/: __init__.py
src/gx_freshness/adapters/: __init__.py
src/gx_freshness/adapters/inbound/: __init__.py
src/gx_freshness/adapters/inbound/cli/: __init__.py  database_url_resolver.py  main.py
src/gx_freshness/adapters/inbound/config/: __init__.py  yaml_config_loader.py
src/gx_freshness/adapters/outbound/: __init__.py
src/gx_freshness/adapters/outbound/database/: __init__.py  sql_freshness_repository.py
src/gx_freshness/adapters/outbound/great_expectations/: __init__.py  gx_validation.py
src/gx_freshness/adapters/outbound/logging/: __init__.py  (+1 more)
src/gx_freshness/application/: __init__.py  run_freshness_checks.py
src/gx_freshness/domain/: __init__.py
src/gx_freshness/domain/models/: __init__.py  freshness_config.py  freshness_run_result.py  record_count_config.py  schema_scan_config.py  table_config_builder.py  table_freshness_config.py  table_override_config.py  table_rule_config.py  validation_summary.py
src/gx_freshness/domain/ports/: __init__.py  freshness_repository.py  validation_service.py
tests/: test_config.py  test_database.py  test_gx_validation.py  test_logging_config.py  test_rendering.py  test_rules.py  test_sql.py
(+6 files in other folders)
