[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gx-freshness"
version = "0.1.0"
description = "YAML-driven freshness checks using Great Expectations."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "great_expectations>=1.18,<2",
    "pandas>=2.2,<3",
    "PyYAML>=6,<7",
    "SQLAlchemy>=2.0,<3",
]

[project.optional-dependencies]
postgres = [
    "psycopg[binary]>=3.2,<4",
]

[dependency-groups]
dev = [
    "pytest>=8,<9",
]

[project.scripts]
gx-freshness = "gx_freshness.adapters.inbound.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
