[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gx-freshness"
version = "0.1.0"
description = "YAML-driven freshness checks using Great Expectations."
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies", "optional-dependencies"]

[project.scripts]
gx-freshness = "gx_freshness.adapters.inbound.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements/app.dependencies.txt"] }

[tool.setuptools.dynamic.optional-dependencies]
postgres = { file = ["requirements/postgres.dependencies.txt"] }
test = { file = ["requirements/test.dependencies.txt"] }

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["gx_freshness"]

[tool.coverage.report]
show_missing = true
skip_covered = true
